syntax = "proto3";

//The BookRoom service definition.

service BookHotelRoom{
    rpc GetRoom (RoomNumber) returns (RoomData){}
    rpc BookRoom (Booking) returns(Book){}
}

enum RoomType{
    BASIQUE = 0;
    MIDL_GAMME = 1;
    HAUT_GAMME = 2;
}

message RoomData{
    RoomType type = 1;
    float price = 2;
}

message RoomNumber{
    uint32 numero = 1;
}

message Dates{
    int32 day = 1;
    int32 month = 2;
    int32 year = 3;
}

message Booking{
    int32 type = 1;
    Dates dateDebut = 2;
    Dates dateFin = 3;
}

message Book{
    bool bookStatus = 1; //True if booked, false if not.
}